[project]
name = "bojtools"
version = "0.6.5"
description = "Baekjoon Online Judge CLI tools"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.13.3",
    "lxml>=6.0.2",
    "nodriver>=0.48.1",
    "tomli>=2.4.0",
    "tomli-w>=1.2.0",
]
license = {text = "MIT"}
authors = [
    {name = "Seunghwan Chun", email = "zshchun@gmail.com"},
]

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[project.scripts]
boj = "bojtools.__main__:main"
