[metadata]
name = bojtools
url = https://github.com/zshchun/bojtools
author = Seunghwan Chun
author_email = zshchun@gmail.com
version = attr: baekjoon.__version__

[options]
packages=
    baekjoon
install_requires =
    tomli
    tomli-w
    aiohttp
    lxml
    nodriver

[options.entry_points]
console_scripts =
    boj=baekjoon.__main__:main
